# Dariusz-Policz

./: Artefakty MG.ods  Artefakty.xlsx  Product Backlog.docx  README.md  przeglad_kalkulatorow_naukowych.odt  raport-MG.docx
program/kalkulator/: CMakeLists.txt  calc.hpp  main.cpp  test_calc.cpp
program/kalkulator/include/: cal_BB.hpp  calc_BB.hpp  calc_MG.hpp  calc_MGr.hpp  calc_RG.hpp
program/kalkulator/src/: cal_BB.cpp  calc_BB.cpp  calc_MG.cpp  calc_MGr.cpp  calc_RG.cpp
program/kalkulator/test/: test_calc.cpp
raporty/: Artefakty.ods  Zapoznanie się z funkcjami kalkulatorów naukowych.docx  przeglad_kalkulatorow_naukowych.odt  raport-BB  raport-RG.odt
